--- a/fms/track3/static/templates/income.html
+++ b/fms/track3/static/templates/income.html
@@ -1,14 +1,27 @@
-{% extends "base.html" %}
-{% block content %}
-
-<form action="adding", method="POST">
-    {%csrf_token%}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Finance Management System </title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/income.css' %}">
+    </head>
     
-    
-   Income: <input type="text" name="salary" required="" >
+        <body>
+            <div class="login-box">
+                <img src="static/images/rs.jpg" class="rs">
+                    <h1>ADD INCOME</h1>
+            <form action="adding" method="post">
+                {% csrf_token %}
+                
+                    <input type="number" name="salary" required="">
+                    
+                    <input type="submit" name="submit" value="Submit">
+                       
+            </form>
 </div>
     
-    <button type='submit'>submit</button><br>
-        
-    </form>
-{% endblock %}
+    
+</body>
+</html>
