--- a/fms/track3/static/templates/login.html
+++ b/fms/track3/static/templates/login.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Page title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel='stylesheet' type='text/css' media="screen" href="main.css"
-    <script src='main.js'</script>
+    <title> Finance Management System </title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
+    
 </head>
 <body>
+    <div class="login-box">
+        <img src="static/images/rs.jpg" class="rs">
+            <h1>Login Here</h1>
     <form action="login" method="post">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="username"><br>
-        <input type="password" name="password" placeholder="password"><br>
-        <input type="submit">
+        <p>Username</p>
+            <input type="text" name="username" required="">
+            <p>Password</p>
+            <input type="password" name="password" required="">
+            <input type="submit" name="submit" value="Login">
+            <a href="register">Register</a>  
+               
     </form>
 
         <div>
