--- a/fms/track3/static/templates/register.html
+++ b/fms/track3/static/templates/register.html
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Registeration</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel='stylesheet' type='text/css' media="screen" href="main.css"
-    <script src='main.js'</script>
+    <title> Finance Management System </title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/register.css' %}">
+    
 </head>
-<body bgcolor="yellow">
-    <form action="register" method="post"> 
-        {% csrf_token%}
-
-        <input type="text" name="first_name" placeholder="First Name"><br>
-        <input type="text" name="last_name" placeholder="Last Name"><br>
-        <input type="text" name="username" placeholder="Username"><br>
-        <input type="email" name="email" placeholder="email"><br>
-        <input type="password" name="password1" placeholder="Password"><br>
-        <input type="password" name="password2" placeholder="Confirm Password"><br>
-        <input type="submit">
-
-    </form>
+<body>
+    <div class="login-box">
+    <img src="static/images/rs.jpg" class="rs">
+        <h1>Registration</h1>
+            <form>
+            
+            <input type="text" name="first_name" placeholder="First Name">
+	    <input type="text" name="last_name" placeholder="Last Name">
+            <input type="text" name="username" placeholder="Username">
+            <input type="email" name="email" placeholder="email">
+            <input type="password" name="password1" placeholder="Enter Password">
+            <input type="password" name="password2" placeholder="Confirm Password"><br>
+		<br>
+            <input type="submit" name="submit" value="Register">
+                
+            </form>
+        
+        
+        </div>
+    
+    </body>
+</html>
     <div>
         {% for message in messages %}
         <h3>{{message}}</h3>
