added register validation form

--- a/fms/track3/static/templates/login.html
+++ b/fms/track3/static/templates/login.html
@@ -19,7 +19,10 @@
             <p>Password</p>
             <input type="password" name="password" required="">
             <input type="submit" name="submit" value="Login">
-            <a href="register">Register</a>  
+            <p><font size="3" color="red">If you not Member</font></p>
+            
+            <h1><a  href="register"><font size="5" color="yellow">Register</a></font></h1>
+            
                
     </form>
 
