--- a/fms/track3/static/styles/adds.css
+++ b/fms/track3/static/styles/adds.css
@@ -11,8 +11,8 @@ body{
     height: 420px;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
-    top: 60%;
-    left: 60%;
+    top: 85%;
+    left: 20%;
     position: absolute;
     transform: translate(-50%,-50%);
     box-sizing: border-box;
@@ -32,7 +32,11 @@ h1{
     text-align: center;
     font-size: 22px;
 }
-
+.login-box p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
 .login-box input{
     width: 100%;
     margin-bottom: 20px;
