--- a/fms/track3/static/templates/addspending.html
+++ b/fms/track3/static/templates/addspending.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Finance Management System </title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/addspending.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/adds.css' %}">
     </head>
     <body>
         <div class="login-box">
@@ -13,8 +13,12 @@
                 <h1>EXPENSE</h1>
             <form action="formoney", method="POST">
                 {% csrf_token %}
-                <input type="number" name="expense" required="">
-                    
+              <h4>
+               FOOD: <input type="number" name="food required="">
+               RENT: <input type="number" name="rent" required="">
+               TRANSPORT: <input type="number" name="transport" required="">
+               OTHERS: <input type="number" name="others" required="">
+            </h4>    
                     <input type="submit" name="submit" value="Submit">
                        
             </form>
